--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "custom-cursor-react": "^1.0.5",
     "framer-motion": "^6.3.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
@@ -20,6 +21,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
