--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "custom-cursor-react": "^1.0.5",
     "framer-motion": "^6.3.6",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0"
   },
